<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="empty"></string>
    <string name="app_name">Transit Widget</string>
    <string name="oss_license_name">Open Source Licenses</string>

    <!-- default agency for new users. -->
    <string name="defaultAgency">mbta</string>

    <string name="menuAgency">Select Transit Agency</string>
    <string name="menuFavorite">Favorite</string>
    <string name="menuOSS">OSS Licenses</string>

    <string name="saveBtnLabel">Save</string>
    <string name="cancelBtnLabel">Cancel</string>

    <string name="startPointLabel">Start</string>
    <string name="endPointLabel">Stop</string>

    <string name="morePredictions">Future Predictions</string>

    <string-array name="default_spinner">
        <item >Unspecified</item>
    </string-array>

    <string name="startTimeLabel">Start Time</string>
    <string name="endTimeLabel">End Time</string>

    <string name="agencyLabel">Select Transit Agency</string>
    <string name="routeLabel">Select Bus Route</string>
    <string name="directionLabel">Select Route Direction</string>
    <string name="stopLabel">Select Stop</string>
    <string name="startTimeLabel">Select Time to Start Updating</string>
    <string name="endTimeLabel">Select Time to Finish Updating</string>

    <string name="timesDescription">To conserve battery life, TransitWidget only updates every 30 seconds between the start and end time. You can always tap to immediately update.</string>

    <string name="spinnerLabel">Unspecified</string>
    <string name="which_bus_preferences">Which Bus?</string>

    <string name="which_agency_title">Agency</string>
    <string name="which_agency_dialog_title">Select the Agency</string>
    <string name="which_agency_summary">Transit Authority or Bus Company</string>

    <string name="which_route_title">Route</string>
    <string name="which_route_dialog_title">Select the Route</string>
    <string name="which_route_summary">Bus, Subway or Train Route</string>

    <string name="which_direction_title">Direction</string>
    <string name="which_direction_dialog_title">Select the Direction</string>
    <string name="which_direction_summary">Direction, Destination or Variation</string>

    <string name="which_stop_title">Stop</string>
    <string name="which_stop_dialog_title">Select the Stop</string>
    <string name="which_stop_summary">Bus Stop, Subway or Train Station</string>
    
    <string name="license_sherlock_label">ActionBarSherlock</string>
    <string name="license_sherlock">Copyright 2012 Jake Wharton\n
\n
Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n
\n
http://www.apache.org/licenses/LICENSE-2.0\n
\n
Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
    </string>
    
    <string name="license_holo_everywhere_label">HoloEverywhere</string>
    <string name="license_holo_everywhere">Copyright (c) 2012 Christophe Versieux, Sergey Shatunov\n
\n
Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\n
\n
The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\n
\n
THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>
</resources>